# cornellbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PHASE2_COMPLETE.md  README.md  build.bat  demo_phase2.ps1  run copy.bat  run.bat  test_phase2.ps1
doc/: HEMISPHERE_FORM_FACTOR_IMPLEMENTATION.md  optix_integration_guide.md  optix_status.md  radiosity_course_theory_first_introduction.md  soa_architecture_fix.md  week2_architecture_simplified.md  week3_progress.md
doc/X/: post.md
doc/src_old/: main.cpp
doc/src_old/core/: Patch.h  Scene.h
doc/src_old/experiments/: FormFactorTests.h
doc/src_old/geometry/: IndexedMesh.h
doc/src_old/math/: MathUtils.h  Matrix4.h  Vector3.h
doc/src_old/output/: OBJWriter.h  PLYWriter.h
doc/src_old/radiosity/: FormFactor.h  FormFactor_clean.h  FormFactor_old.h  MonteCarloFormFactor.h  MonteCarloFormFactor.h.backup2  RadiosityRenderer.h
doc/src_old/scene/: CornellBox.h  Material.h
doc/src_old/visibility/: OptiXContext.h  OptiXLaunchParams.h  VisibilityTester.h  optix_kernels.cu
old_scripts/: build.ps1  clean.ps1  fast_build.ps1  run.ps1  run_all.ps1  test_ptx_rebuild.ps1
output/: stdout.txt
prompts/complete_revision/: radiosity_cornell_box_3_phase_c_cuda_opti_x_coding_plan.md
prompts/formfactor_review/: radiosity_debug_review_black_room_except_light.md
prompts/kernel_review_gpt52/: opti_x_visibility_kernel_review.md
prompts/old/after_checklist/: coding_plan.md
prompts/old/build_revision/: coding_plan.md
prompts/old/feature_radiosity_general/: general_classical_radiosity_with_ray_based_visibility.md  radiosity_implementation_checklist_copilot_guardrails.md
prompts/old/per_vertex_energy/: coding_plan_per_vertex_radiosity_reconstruction.md
prompts/old/radiosity_with_optix/: coding_plan.md  folder_structure.md  optix_ready_architecture.md  optix_wsl_installation.md
src/: main.cpp  viewer_main.cpp
src/app/: Config.h
src/export/: AOExporter.h  OBJExporter.h  VertexColor.h
src/gpu/: HemisphereFormFactorKernels.cu  OptiXContext.h  RenderKernels.cu  Renderer.h  optix_kernels.cu  optix_kernels.cu.bak
src/math/: HemisphereSampling.h  MathUtils.h  vec3.h
src/mesh/: AdaptiveRefinement.h  MeshData.h  PatchBuilder.h  Subdivision.h
src/radiosity/: FormFactor.h  FormFactorCache.h  FormFactorPrecompute.h  Solver.h  Solver.h.bak
src/scene/: CornellBox.h  OBJLoader.h  SceneLoader.h
src/solver/: FormFactor.h  FormFactorRefinement.h
src/tests/: test_form_factors.cpp
src/viewer/: Viewer.h
src/visibility/: SamplePatterns.h  VisibilityCache.h  VisibilityCompute.h
